--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 
   <!-- ======= Hero Section ======= -->
   <div id="hero" class="home">
-
+<div class="hero">
+    div with background
+</div>
     <div class="container">
       <div class="hero-content">
         <h1>I'm <span class="typed" data-typed-items="Johnny Depp, Actor, Millioner"></span></h1>
